# classick

./: .gitignore  AGENTS.md  Cargo.toml  LEARNINGS.md  README.md  SCSI.md  SPEC.md  THIRD-PARTY-NOTICES.md  appcast.xml  build.rs  index.html
crates/classick/: Cargo.toml  build.rs
crates/classick/data/device-capabilities/: nano-1g-v1.json  nano-1g-v1.manifest.json
crates/classick/data/sysinfo-extended/: ATTRIBUTION.md  classic-6g.plist  classic-late2009.plist  nano-1g.plist  nano-2g.plist  nano-3g.plist  nano-4g.plist  photo-4g.plist  video-5g.plist
crates/classick/examples/: art-audit.rs  bench-diff.rs  daemon-probe.rs  ipod-albums.rs  ipod-durations.rs  mac-identity.rs  playlist-id-spike.rs  remove-synced.rs  rockbox-embed-check.rs  scsi-probe.rs  wipe-tracks.rs
crates/classick/src/: apply_loop.rs  art_audit.rs  artwork.rs  artwork_cache.rs  atomic_file.rs  checkpoint.rs  cli.rs  config.rs  config_file.rs  device_config.rs  device_coordination.rs  device_state.rs  ffi.rs  fit.rs  free_space.rs  ipc.rs  ipc_daemon.rs  ipc_device.rs  lib.rs  library_index.rs  logging.rs  main.rs  manifest.rs  manifest_store.rs  orchestrator.rs  pending_session.rs  pipeline.rs  playlist.rs  playlist_audit_command.rs  playlist_rules.rs  portable_path.rs  preflight.rs  progress.rs  rockbox_playlist.rs  rockbox_projection.rs  rockbox_projection_fs.rs  scan.rs  scsi_inquiry.rs  selection.rs  source.rs  (+9 more)
crates/classick/src/daemon/: command_handler.rs  device_config_transaction.rs  device_config_transaction_tests.rs  device_registry.rs  device_registry_v2.rs  device_snapshot.rs  device_storage.rs  device_watcher.rs  history.rs  iokit_watcher.rs  ipc_server.rs  library.rs  library_drop.rs  library_mutations.rs  library_watcher.rs  lifecycle.rs  macos_netfs.rs  mod.rs  mutation_ledger.rs  netfs_shim.m  playlist_commands.rs  protocol_v3.rs  runtime.rs  runtime_state.rs  scheduler.rs  session_admission.rs  source_availability.rs  source_availability_test_support.rs  state.rs  sync_orchestrator.rs  unix_socket.rs
crates/classick/src/daemon/playlist_commands/: journal.rs  reconcile.rs  transaction.rs
crates/classick/src/device/: catalogue.rs  catalogue_tests.rs  discovery.rs  discovery_tests.rs  facts.rs  id.rs  inventory.rs  inventory_tests.rs  legacy_v2.rs  legacy_v2_polling_identity_tests.rs  legacy_v2_tests.rs  mod.rs  observation_tests.rs  readiness.rs  readiness_tests.rs  tests.rs
crates/classick/src/device/readiness/: authority.rs
crates/classick/src/device_coordination/: generation.rs
crates/classick/src/ipod/: capability.rs  db.rs  device.rs  device_playlists.rs  layout.rs  macos_iokit.rs  mod.rs  playlist_audit.rs  playlist_normalize.rs  playlist_ownership.rs  playlist_profile.rs  sysinfo_foreign.rs  sysinfo_policy.rs  sysinfo_projection.rs  sysinfo_provision.rs
crates/classick/src/ipod/device_playlists/: reconcile.rs
crates/classick/src/pending_session/: tests.rs
crates/classick/src/portable/: coordinator.rs  device_store.rs  device_transaction.rs  host_cache.rs  legacy_import.rs  mod.rs  outbox.rs  profile.rs  profile_scalars.rs  profile_values.rs  reconcile.rs  state_store.rs
crates/classick/src/portable/outbox/: tests.rs
crates/classick/src/rockbox_projection/: planner_validation_cases.rs  tests.rs
crates/classick/src/rockbox_projection_fs/: common.rs  extra_tests.rs  macos.rs  tests.rs  unix.rs  unix_common.rs  windows.rs
crates/classick/src/sync_transaction/: playlist_publication.rs  rockbox_publication.rs  rollback.rs
crates/classick/src/sync_transaction/rockbox_publication/: tests.rs
crates/classick/src/transcode/: macos_probe.rs
crates/classick/src/wire/: command.rs  config.rs  event.rs  event_validation.rs  global.rs  hello.rs  history.rs  inventory.rs  legacy_command.rs  legacy_progress.rs  library.rs  mod.rs  operations.rs  playlist.rs  routing.rs
crates/classick/tests/: auto_restore_integration.rs  capability_profile_fixture.rs  daemon_lifecycle_integration.rs  daemon_multi_device_integration.rs  daemon_runtime_integration.rs  device_coordination_integration.rs  device_playlist_mirror_integration.rs  device_playlists_integration.rs  device_registry_v2.rs  fit_retry_integration.rs  library_drop_daemon_integration.rs  library_mutation_integration.rs  library_watcher_integration.rs  pending_recovery_integration.rs  playlist_audit_integration.rs  playlist_deletion_integration.rs  playlist_normalization_integration.rs  playlist_ownership_integration.rs  playlist_track_unlink_integration.rs  playlists_e2e.rs  portable_coordinator.rs  portable_device_store.rs  portable_host_cache.rs  portable_legacy_import.rs  portable_outbox_operations.rs  portable_outbox_schema.rs  portable_profile_schema.rs  portable_reconcile.rs  portable_reconcile_confirmation.rs  portable_state_store.rs  recovery_safety_integration.rs  rockbox_projection_integration.rs  sysinfo_foreign.rs  sysinfo_policy.rs  sysinfo_projection.rs  wipe_all_tracks_integration.rs  wire_v3_device.rs  wire_v3_hello.rs  wire_v3_legacy_commands.rs  wire_v3_legacy_progress.rs  (+3 more)
crates/classick/tests/data/wire-v3/: legacy-decisions.json  manifest.json
crates/classick/tests/data/wire-v3/admission-failure/: hello-old-major.json  hello-wrong-role.json
crates/classick/tests/data/wire-v3/canonicalize/: hello-unsorted-capabilities.json
crates/classick/tests/fixtures/: bare.m4a  ipod-classic-video-kind-v1-libgpod-post-write.json  ipod-classic-video-kind-v1.json  manifest-v1-windows.json  manifest-v2-portable.json  sample-config.toml  sample-ffprobe-aac.json  sample-ffprobe-vorbis.json  sample-ffprobe.json  tagged.flac
crates/classick/tests/fixtures/device-capabilities/: classic-late-2009-v1.json  classic-late-2009-v1.manifest.json
crates/classick/tests/fixtures/device-readiness/: README.md  factory-restored.paths  finder-initialized.paths
crates/classick/tests/playlist_deletion_integration/: support.rs
crates/classick/tests/rockbox_projection_integration/: support.rs
crates/classick/tests/support/: full_integrity_fixture.rs  playlist_audit_fixture.rs
docs/: README.md  SCSI.md  architecture.md  (+4 more)
(+484 files in other folders)
