[package]
name = "ipod-sync"
version = "0.0.1"
edition = "2021"
description = "Windows-native FLAC-to-iPod-Classic sync with on-the-fly ALAC transcoding"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ipod-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
blake3 = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.29"
dirs = "5"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "process"] }

[build-dependencies]
bindgen = "0.72"
