[package]
name = "classick"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "FLAC-to-iPod-Classic sync with on-the-fly ALAC transcoding (Windows-first, daemon mode cross-platform)"

[[bin]]
name = "classick"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
blake3 = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.29"
dirs = "5"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "process", "signal"] }
plist = "1"
image = "0.25"
# MP4 tag/cover-art writer for the artwork module (crates/classick/src/artwork.rs).
# Was previously macOS-only (used there for tag/cover-art *reading*); the
# artwork module's embed_track_metadata is used by both the macOS (afconvert)
# and Windows/Linux (ffmpeg) transcode backends, so it must be an unconditional
# dependency, not gated to cfg(target_os = "macos").
lofty = "0.22"
notify = { workspace = true }

# Windows-only native APIs for ordinary USB association and the separately
# invoked SCSI diagnostic. Production discovery does not issue SCSI requests.
[target.'cfg(windows)'.dependencies]
# Win32_Security needed because CreateFileW's signature references SECURITY_ATTRIBUTES.
# Win32_System_Diagnostics_ToolHelp powers detect_apple_processes' Toolhelp32 walk
# (replaces a 300ms PowerShell shellout — see preflight.rs).
# Win32_Devices_DeviceAndDriverInstallation powers the SetupAPI + Cfgmgr32 walk in
# ordinary USB fact collection (disk-device enumeration → USB parent → PID extraction),
# replacing the second PowerShell shellout — see ipod/device.rs.
windows-sys = { version = "0.59", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
# Native IOKit/CoreFoundation FFI for device identity (mount->FirewireGuid via
# statfs BSD name -> IORegistry) + event-driven hotplug. servo/core-foundation-rs
# set; supersedes the prior ioreg/df shellouts.
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"
# libc comes from the cfg(unix) table above — macOS matches that cfg too.

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util"] }

[build-dependencies]
bindgen = "0.72"
cc = "1"
# pkg-config resolves libgpod + glib paths on non-Windows targets. The crate
# is harmless on Windows (only invokes the pkg-config binary when its API is
# called, and build.rs only calls it from the non-Windows arm) — keeping it
# unconditional avoids a target-gated build-dep with surprising behavior.
pkg-config = "0.3"
